--- a/main.css
+++ b/main.css
@@ -135,6 +135,10 @@ p{
         width: 100%;
         margin: 0;
         height: 400px;
+        border-radius: 0px;
+    }
+    .head{
+    border-radius: 0px;
     }
 }
 
